// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIssueDetailsDialog render while closed 1`] = `
<FileIssueDetailsDialog
  buttonRef={null}
  fileIssueDetailsHandler={
    proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "htmlElementUtils": undefined,
      "onLayoutDidMount": [Function],
    }
  }
  getSettingsPanel={null}
  isOpen={false}
  onDismiss={null}
  onOpenSettings={null}
/>
`;

exports[`FileIssueDetailsDialog render while open 1`] = `
<FileIssueDetailsDialog
  buttonRef={null}
  fileIssueDetailsHandler={
    proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "htmlElementUtils": undefined,
      "onLayoutDidMount": [Function],
    }
  }
  getSettingsPanel={null}
  isOpen={true}
  onDismiss={null}
  onOpenSettings={null}
/>
`;

exports[`FileIssueDetailsDialog renders as expected 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insights-file-issue-details-dialog-container",
      "isBlocking": false,
      "layerProps": Object {
        "className": "insights-dialog-main-override insights-file-issue-details-dialog-override",
        "onLayerDidMount": [Function],
      },
    }
  }
  onDismiss={null}
  title="File Issue"
>
  <React.Fragment>
    <p>
      Issue filing location must be configured before filing issues. Enter in the location information into settings in order to file issues.
    </p>
    <StyledDialogFooterBase>
      <CustomizedPrimaryButton
        onClick={[Function]}
        text="Go to settings"
      />
      <CustomizedDefaultButton
        onClick={[Function]}
        text="Cancel"
      />
    </StyledDialogFooterBase>
  </React.Fragment>
</StyledWithResponsiveMode>
`;
